fix broken css

--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -107,7 +107,7 @@
         }
     }
 
-    .course {
+    .course_section {
         margin-top: 75px;
 
         .course_wrapper {
